<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name:</string>
    <string name="input_name">Input Name</string>
    <string name="mobile_no">Mobile No. :</string>
    <string name="input_mobile_number">Input Mobile Number</string>
    <string name="pax">Pax:</string>
    <string name="input_pax">Input pax</string>
    <string name="smoking_area">Non-Smoking Area</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
</resources>
